--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-# carousel
-原生JavaScript 图片轮播
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <!--引入CSS样式-->
+    <link rel="stylesheet" href="css/style.css">
+    <!---->
 
-图片的淡入淡出效果
-
-使用方法：
-
-在html中添加以下代码到对应位置
-
-```html
+</head>
+<body>
 <!--banner start-->
 <div id="banner">
     <ul class="banner-list">
@@ -30,20 +31,9 @@
 
 </div>
 <!--banner-->
-```
 
-引入css文件和js文件
-
-```html
-<!--引入CSS样式-->
-<link rel="stylesheet" href="css/style.css">
-<!---->
-```
-
-```html
 <!--引入JS文件-->
 <script src="js/carousel.js"></script>
 <!---->
-```
-
-效果图： ![屏幕快照 2016-10-31 22.48.19](../../../../Users/jun/Pictures/ScreenCapture/屏幕快照 2016-10-31 22.48.19.png)
+</body>
+</html>
